<resources>
    <!-- General strings -->
    <string name="app_name">Project</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_forgotten_password">Forgotten Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_forgotten_password">Forgotten your password?</string>
    <string name="confirm_registry">Email not found. Would you like to register?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Strings related to Registration -->
    <string name="action_register">Not signed up? Register</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_register_button">Register</string>

    <!-- Strings related to menu items -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <!-- Strings related to posting -->
    <string name="imageView_description">Photo of Product</string>
    <string name="action_take_picture">Take Photo</string>
    <string name="action_post">Sell</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_tags">Tags</string>
    <string name="prompt_category">Category</string>
</resources>
